--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -9,6 +9,6 @@
     <span class="chat-line {{#if success}}test-success{{else}}test-failure{{/if}}">{{pass}}</span>
     <span class="roll-result">{{dos}}</span>
     {{#unless reroll}}
-    <a class="button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}" data-weapon="{{weapon}}">Reroll</a>
+    <a class="button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}" data-weapon="{{weapon}}" data-fire="{{fireRate}}">Reroll</a>
     {{/unless}}
 </div>
