--- a/templates/item/item-psychicPower-sheet.html
+++ b/templates/item/item-psychicPower-sheet.html
@@ -52,8 +52,10 @@
             <input type="text" value="{{data.pen.formula}}" name="data.pen.formula" data-dtype="String">
         </div>
         <div class="flexcol">
-            <label>Special:</label>
-            <input type="text" value="{{data.special.value}}" name="data.special.value">
+           
+            <a class="weapon-special button">Special</a>
+            
+       
         </div>
         <div class="flexcol">
             <label>Damage Type:</label>
