--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -23,11 +23,12 @@
     
 }
 
-.rollable:hover, .rollable:focus {
+.button:hover, .button:focus {
     color: #000;
     text-shadow: 0 0 10px red;
     cursor: pointer;
 }
+
 
 .grid,
 .grid-2col {
@@ -529,3 +530,31 @@
 .power-safe{
     border-color: green !important;
 }
+.special-list{
+    display:flex;
+    justify-self: flex-start;
+    padding-left:3px;
+    border: 1px solid #999;
+    height:100%;
+    width:100%;
+}
+.weapon-special-number{
+    flex: 1;
+    width: 50px;
+    justify-self: flex-end;
+}
+.dialog-column{
+    width:100%;
+    height:100%;
+    display:block;
+}
+.attack-section{
+    width:100%;
+}
+.attack-section input{
+    flex:1;
+}
+.attack-section label{
+    flex:4;
+}
+[hidden] { display: none !important; }
