--- a/templates/item/item-consummable-sheet.html
+++ b/templates/item/item-consummable-sheet.html
@@ -8,6 +8,17 @@
         <input type="text" value="{{data.weight.value}}" name="data.weight.value">
     </div>
     <div class="flexcol">
+            <label>Item Quality:</label>
+
+            <select class="quality"  name="data.quality.value">
+                {{#select data.quality.value}}
+                {{#each item.FORTYK.itemQualities}}
+                <option value="{{this}}">{{this}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
+        </div>
+    <div class="flexcol">
         <label>Rarity:</label>
         <select class="power-type" name="data.rarity.value">
             {{#select data.rarity.value}}
