--- a/templates/actor/actor-psykana.html
+++ b/templates/actor/actor-psykana.html
@@ -80,7 +80,7 @@
                 <label class="list-item">Power Type: {{power.data.class.value}}</label>
                 <div class="list-item flexrow">
                     <label>PR: </label>
-                    <input type="text" class="psy-pr" data-item-id="{{power._id}}" value="{{power.data.curPR.value}}" data-dtype="Number">
+                    <input type="text" class="item-text-input" data-target="data.curPR.value" data-item-id="{{power._id}}" value="{{power.data.curPR.value}}" data-dtype="Number">
                 </div>
                 <div class="list-item flexrow">
                     <label>Test Target: </label>
