--- a/templates/actor/dialogs/melee-attack-dialog.html
+++ b/templates/actor/dialogs/melee-attack-dialog.html
@@ -131,6 +131,11 @@
             </div>
             <div class="list-item flexrow">
 
+                <input type="checkbox" name="running" value="20" ><label>Running: +20</label>
+
+            </div>
+            <div class="list-item flexrow">
+
                 <input type="checkbox" name="stunned" value="20" ><label>Stunned: +20</label>
 
             </div>
