--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -1,4 +1,5 @@
 <form class="{{cssClass}} item-sheet flexcol">
+    <span>Make sure that the weapon class and type match the weapon that you are making the ammunition for or it will not show in the combat tab.</span>
     <div class="grid grid-2col">
         <div class="flexcol">
             <label>Name:</label>
