--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -307,6 +307,30 @@
     text-shadow: none;
     border: 3px solid #999;
 }
+.fortyk .list{
+    border: 1px solid #999;
+    flex:none;
+    justify-items: stretch;
+    align-items: stretch;
+}
+.fortyk .list3col{
+    
+    grid-template-columns: auto 30px 30px;
+}
+.fortyk .list4col{
+    
+    grid-template-columns: auto auto 30px 30px;
+}
+.fortyk .list5col{
+    
+    grid-template-columns: 50% auto auto 30px 30px;
+}
+.fortyk .list-item{
+    border: 1px solid #999;
+    width:100%;
+    height:100%;
+    padding:3px;
+}
 .fortyk .skills{
 
     border: 1px solid #AAA;
@@ -326,6 +350,7 @@
 .fortyk .skills .skills-header .gap{
     background-image:"" !important;
     background-color: black !important;
+    border: 1px solid black !important;
 }
 .fortyk .skills .skills-header select{
     width:100%;
@@ -372,7 +397,34 @@
     margin-left:3px;
     display:inherit;
 }
-
+.fortyk .weapon-name{
+    grid-column: span 2;
+    border: 3px solid black;
+    width:100%;
+    padding:3px;
+    font-weight: bolder;
+}
+.fortyk .weapon-select{
+    flex-basis:50%;
+}
+.fortyk .worn-item-plus{
+    background-image: url("../icons/plus.png") !important; 
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:15px !important;
+    height:15px !important;
+    margin-left:3px;
+    display:inherit;
+}
+.fortyk .worn-item-minus{
+    background-image: url("../icons/minus.png") !important; 
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:15px !important;
+    height:15px !important;
+    margin-left:3px;
+    display:inherit;
+}
 
 .fortyk .items-list {
     list-style: none;
@@ -430,30 +482,7 @@
     flex:none;
     margin-bottom: 5px;
 }
-.fortyk .list{
-    border: 1px solid #999;
-    flex:none;
-    justify-items: stretch;
-    align-items: stretch;
-}
-.fortyk .list3col{
-    
-    grid-template-columns: auto 30px 30px;
-}
-.fortyk .list4col{
-    
-    grid-template-columns: auto auto 30px 30px;
-}
-.fortyk .list5col{
-    
-    grid-template-columns: 50% auto auto 30px 30px;
-}
-.fortyk .list-item{
-    border: 1px solid #999;
-    width:100%;
-    height:100%;
-    padding-left:3px;
-}
+
 .fortyk .section-title{
     text-align: center;
     border-bottom: 2px solid #999;
@@ -513,6 +542,9 @@
 }
 .fortyk .npcdescr{
     grid-column: span 1;
+}
+.fortyk .npc-info{
+    overflow: scroll;
 }
 .test-success{
     background-color: green !important;
