--- a/templates/item/item-rangedWeapon-sheet.html
+++ b/templates/item/item-rangedWeapon-sheet.html
@@ -1,4 +1,5 @@
 <form class="{{cssClass}} item-sheet flexcol">
+    <span>You will have to create an ammunition item in order to fire your ranged weapon, unless it is a thrown weapon in which case it will use the amount of the weapon as ammo.</span>
     <div class="grid grid-3col">
         <div class="flexcol">
             <label>Name:</label>
